[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/EnemyPong.gd" type="Script" id=1]
[ext_resource path="res://Textures/enemy/shmup_drone.png" type="Texture" id=2]
[ext_resource path="res://sfx/Explosions/Explosion2.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/Impacts/Damage2.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="Enemy" type="Area2D" groups=[
"Enemy",
]]
position = Vector2( 0, -1 )
collision_layer = 2
script = ExtResource( 1 )
burstTime = 2.0
breakTime = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="enemy2" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Sprite" type="Sprite" parent="enemy2"]
position = Vector2( -2.45548, 0.204622 )
scale = Vector2( 0.795377, 1.01279 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
